--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vuepress dev docs --temp .temp",
+    "start": "npm run docs:dev",
     "docs:build": "vuepress build docs"
   },
   "keywords": [],
